--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # default configuration
-baseURL = "https://demo.gethugothemes.com/kross/examplesite/"
+baseURL = "https://pawpantrymission.netlify.app/"
 languageCode = "en-us"
 summaryLength = "10"
 theme = "kross-hugo"
